test_suite5/ALAN/test_suite/alan-2022-examples/passing/000480_deriv.alan
source k function I(boolean RBD8a, boolean array e4s) begin relax end begin relax end
